@@ -4,13 +4,12 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.4"
-        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.5.1"
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.11.0"
     }
 }
 
 plugins {
-    id "org.sonarqube" version "2.2"
+    id "org.sonarqube" version "2.6.2"
 }
 
 apply plugin: 'io.codearte.nexus-staging'
@@ -54,20 +53,25 @@ subprojects {
     version = getVersionName()
 
     apply plugin: 'java'
+    apply plugin: 'java-library'
     apply plugin: 'maven'
     apply plugin: 'maven-publish'
     apply plugin: 'checkstyle'
     apply plugin: 'jacoco'
     apply plugin: 'signing'
 
+    sourceCompatibility = 1.10
+    targetCompatibility = 1.10
+
     checkstyle {
         configFile = new File(rootDir, "infra/codehealth/checkstyle.xml")
-        toolVersion = "7.1.1"
+        toolVersion = "8.8"
         ignoreFailures = false
     }
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    tasks.withType(Checkstyle) {
+        exclude '**/module-info.java'
+    }
 
     jacoco {
         reportsDir = file("build/coverage/jacoco.exec")
@@ -77,16 +81,24 @@ subprojects {
         mavenCentral()
     }
 
+    configurations.all {
+        // Conflicts with javax.annotations
+        exclude group: 'com.google.code.findbugs', module: 'jsr305'
+    }
+
     dependencies {
-        compile 'ch.qos.logback:logback-classic:1.1.7'
-        compile 'org.slf4j:jcl-over-slf4j:1.7.21'
-        testCompile 'junit:junit:4.12'
-        testCompile 'org.hamcrest:hamcrest-all:1.3'
-        testCompile 'org.mockito:mockito-core:1.10.19'
-        testCompile 'org.powermock:powermock-mockito-release-full:1.6.4'
+        implementation "org.slf4j:slf4j-api:$slf4jVersion"
+        testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+        testImplementation "org.junit.vintage:junit-vintage-engine:$junitVersion"
+        testImplementation 'org.assertj:assertj-core:3.9.1'
+        testImplementation "org.mockito:mockito-core:$mockitoVersion"
+        testImplementation "org.powermock:powermock-core:$powermockVersion"
+        testImplementation "org.powermock:powermock-module-junit4:$powermockVersion"
+        testImplementation "org.powermock:powermock-api-mockito2:$powermockVersion"
     }
 
     test {
+        useJUnitPlatform()
         reports {
             junitXml.enabled = true
             html.enabled = true
@@ -180,6 +192,51 @@ subprojects {
                         }
                     }
                 }
+            }
+        }
+    }
+
+    afterEvaluate {
+        compileJava {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                options.compilerArgs = [
+                        '--module-path', classpath.asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+        compileTestJava {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                options.compilerArgs = [
+                        '--module-path', classpath.asPath,
+                        '--add-modules', 'junit',
+                        '--add-reads', "$moduleName=junit",
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+        test {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                jvmArgs = [
+                        '--module-path', classpath.asPath,
+                        '--add-modules', 'ALL-MODULE-PATH',
+                        '--add-reads', "$moduleName=junit",
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+        javadoc {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                options.addStringOption('-module-path', classpath.asPath)
             }
         }
     }
